--- a/package.json
+++ b/package.json
@@ -51,8 +51,14 @@
     }
   },
   "dependencies": {
-    "vue": "^2.5.16",
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-brands-svg-icons": "^5.5.0",
+    "@fortawesome/free-regular-svg-icons": "^5.5.0",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@fortawesome/pro-light-svg-icons": "^5.3.1",
+    "@fortawesome/vue-fontawesome": "^0.1.2",
     "axios": "^0.18.0",
+    "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
