--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@fortawesome/pro-light-svg-icons": "^5.3.1",
     "@fortawesome/vue-fontawesome": "^0.1.2",
     "axios": "^0.18.0",
+    "element-ui": "^2.4.9",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
