--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.2",
     "axios": "^0.18.0",
     "element-ui": "^2.4.9",
+    "v-contextmenu": "^2.8.0",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
