--- a/package.json
+++ b/package.json
@@ -47,7 +47,10 @@
       "icon": "build/icons/icon.ico"
     },
     "linux": {
-      "icon": "build/icons"
+      "icon": "build/icons",
+      "target": [
+        "deb"
+      ]
     }
   },
   "dependencies": {
